public/main.css
/* ... */
.passion-container {
  text-align: center;
}

.passion p {
  margin-bottom: 2rem;
}

.img-container {
  border-radius: var(--borderRadius);
  box-shadow: var(--shadow-2);
  overflow: hidden;
  width: 40rem;
  margin-top: 3rem;
}

.bottom {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  overflow: hidden;
  line-height: 0;
  transform: rotate(180deg);
}

.bottom svg {
  position: relative;
  display: block;
  width: calc(135% + 1.3px);
  height: 75px;
}

.bottom .shape-fill {
  fill: var(--grey-50);
}

/* divider */

.divider {
  width: 70vw;
  height: 0.15rem;
  margin-top: 4rem;
  background: var(--secondary-200);
  box-shadow: var(--shadow-5);
}

/* detials */

.details {
  width: 70vw;
  margin: 0 auto;
  text-align: center;
  margin-top: 4rem;
}

.details-container {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-evenly;
  gap: 2rem;
}

.details-container p {
  color: var(--primary-500);
  flex: 0 1 100%;
}

/* services */

.services {
  width: 80vw;
  margin: 0 auto;
  margin-top: 4rem;
  text-align: center;
}

.services-container {
  display: flex;
  flex-flow: row wrap;
  align-items: center;
  justify-content: center;
}

.services-container > h4 {
  max-width: var(--fixedWidth);
  text-transform: none;
  color: var(--primary-500);
}

.services-container > p {
  color: var(--primary-500);
  margin-bottom: 2rem;
}

.card {
  width: 20rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
  padding: 2rem;
  border-radius: var(--borderRadius);
  box-shadow: var(--shadow-2);
}

.card h5 {
  font-family: var(--bodyFont);
  color: var(--primary-500);
  margin-bottom: 0;
}

.card p {
  color: var(--primary-500);
  margin-bottom: 0;
}

.card-container {
  padding: 0.75rem;
  display: flex;
  flex-flow: row wrap;
  justify-content: space-around;
  gap: 2rem;
}

/* galeria */

.galeria {
  width: 80vw;
  margin: 0 auto;
  text-align: center;
}

.title {
  width: 100%;
  display: flex;
  flex-flow: column;
  align-items: center;
  background: var(--grey-200);
  color: var(--primary-500);
  margin-top: 3rem;
}

.title h4 {
  margin-top: 2rem;
  margin-bottom: 0.375rem;
  text-transform: none;
}

.galeria-container {
  /* width: 80vw; */
  position: relative;
  display: grid; /*one column layour*/
  place-items: center;
  gap: 0.375rem 1rem;
  padding: 3rem 0;
}

.galeria-container img {
  height: 18rem;
  border-radius: var(--borderRadius);
  box-shadow: var(--shadow-2);
}

/* modal */

.relative {
  position: relative;
  width: 100%;
  transition: var(--transition);
}

.relative:hover {
  /* filter: contrast(0.5); */
  transform: scale(1.05);
}

.modal-overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 0;
  transition: var(--transition);
}

.modal-overlay:hover {
  cursor: pointer;
  background: rgba(124, 124, 124, 0.45);
  opacity: 1;
  z-index: 1;
}

.open-modal {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  background: rgba(0 0 0 / 0.3);
  display: none;
  z-index: 1;
}

.open-container {
  position: fixed;
  min-width: 300px;
  width: 80vw;
  height: 80vh;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  display: none;
  background: tomato;
  z-index: 1;
}

/* btn prev/next */

.btn-prev,
.btn-next {
  width: 2rem;
  height: 2rem;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  cursor: pointer;
  transition: var(--transition);
}

.btn-prev:hover,
.btn-next:hover {
  background: var(--secondary-700);
  color: var(--secondary-300);
}

.btn-prev {
  left: 25px;
  border-radius: 50%;
  border: 0;
  background: var(--secondary-500);
  color: var(--primary-500);
}

.btn-next {
  right: 25px;
  border-radius: 50%;
  border: 0;
  background: var(--secondary-500);
  color: var(--primary-500);
}

/* @media (max-width: 992px) {
  .open-container {
    height: 55vh;
  }
}

@media (max-width: 678px) {
  .open-container {
    height: 40vh;
  }
}

@media (max-width: 525px) {
  .open-container {
    height: 25vh;
  }

  .btn-prev,
  .btn-next {
    width: 1.25rem;
    height: 1.25rem;
    font-size: 0.75rem;
  }
} */

/* media queries */

@media screen and (max-width: 375px) {
  .details-container div {
    flex: 0 1 12rem;
  }

  .galeria-container img {
    height: 15rem;
  }

  .open-container {
    height: 30vh;
  }
}

@media screen and (min-width: 376px) {
  .open-container {
    height: calc(100% - (40vh + 30vh));
  }
}

@media screen and (max-width: 476px) {
  .details-container div {
    flex: 0 1 14rem;
  }

  .btn-prev,
  .btn-next {
    width: 1.25rem;
    height: 1.25rem;
    font-size: 0.75rem;
  }
}

@media screen and (min-width: 596px) {
  .services-container {
    flex-flow: column;
  }

  .details {
    max-width: 550px;
  }

  .details-container div {
    flex: 0 1 12rem;
  }

  .card-container {
    justify-content: center;
    gap: 2rem;
  }

  .card {
    width: 40%;
  }

  .galeria-container {
    grid-template-columns: 1fr 1fr;
    gap: 1rem 1rem;
  }

  .galeria-container img {
    height: 15rem;
  }

  .open-container {
    height: calc(100% - (20vh + 30vh));
    /* height: 55vh; */
  }
}

@media screen and (min-width: 890px) {
  .passion {
    flex-flow: column;
  }
}

@media screen and (min-width: 992px) {
  .details-container div {
    flex: 0 1 14rem;
  }

  .card {
    width: 20rem;
  }

  .galeria-container {
    grid-template-columns: 1fr 1fr 1fr;
  }

  .galeria-container img {
    height: 12rem;
  }

  .open-container {
    height: calc(100% - 30vh);
  }
}

@media screen and (min-width: 1180px) {
  .details {
    max-width: var(--maxWidth);
  }

  .details-container div {
    flex: 0 1 auto;
    /* padding: 0 3rem; */
  }

  .galeria-container {
    grid-template-columns: 1fr 1fr 1fr 1fr;
  }

  .galeria-container img {
    height: 12rem;
  }
}
/* ... */

